Try to prevent body scrolling on iPhones during overlay

--- a/static/scss/modules/_overlay-nav.scss
+++ b/static/scss/modules/_overlay-nav.scss
@@ -85,7 +85,10 @@
 }
 
 .no-scroll {
+	height: 100%;
 	overflow: hidden;
+	width: 100%;
+	position: fixed;
 }
 
 
